# PromptEdit

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/editor/: file-autocomplete.ts  mention-decoration.ts  setup.ts  theme.ts
