[package]
name = "promptedit"
version = "0.1.0"
description = "A lightweight prompt editor for Claude Code"
authors = ["Matthieu"]
edition = "2021"

[lib]
name = "promptedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
tauri-plugin-window-state = "2.4.1"
